--- a/01 interior.html
+++ b/01 interior.html
@@ -127,7 +127,7 @@
             </div>
     </main>
 
-    <a href="01 index.html"><button class="btn">BACK</button></a>
+    <a href="index.html"><button class="btn">BACK</button></a>
 
     </section>
 </body>
