--- a/02 interior.html
+++ b/02 interior.html
@@ -128,7 +128,7 @@
     </main>
 
 
-    <a href="01 index.html"><button class="btn">BACK</button></a>
+    <a href="index.html"><button class="btn">BACK</button></a>
     </section>
 
 
