--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
        <img src="icon2.png"> 
-        <nav class="active">
+        <nav>
             <ul>
                 <li> <a href="#home" class="active">Home</a> </li>
                 <li> <a href="#about">About</a> </li>
