--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="banner" id="home">
 
         <div class="dev-icon">
-            <img src="bookmark4.png" alt="">
+            <a href="https://www.instagram.com/avezqureshi14/"><img src="bookmark4.png" alt="Web-Developer"></a>
         </div>
         <div class="content">
             <div class="textBx">
@@ -497,7 +497,12 @@
         <div class="box-container">
             <div class="box">
                 <h3>About Us</h3>
-                <p> We are the Engineers who will construct your Dreams.
+                <p> Hey, we are the Engineers passionate about our work, in mission of creating people's <span> <em>Dream's</em>  </span>  into <span><em>Reality</em></span>, Specially known for constructing wonderfull houses irrespective of land... <br> Thank You,
+                <br> Feel free to contact us  <br>
+
+                <span>Mujeeb Mashalkar :</span> 12-34-56-78-90
+                <br>
+                <span>Tousif Jetphool :</span> 12-34-56-78-90
 
 
                 </p>
@@ -511,7 +516,7 @@
 
         </div>
 
-        <h1 class="credits">Web Developed by <a href="#">Md Avez Nizaamuddin Qureshi </a> &copy; <span id="copy">
+        <h1 class="credits">Web Developed by <a href="https://www.instagram.com/avezqureshi14/">Md Avez Nizaamuddin Qureshi </a> &copy; <span id="copy">
                 2021 all rights reserved
             </span>
         </h1>
